<resources>
    <string name="app_name">Cunnis</string>
    <string name="app_version">v0.1.0.0</string>
    <string name="app_author">Dannel Alvarez Nieto</string>
    <string name="app_dedication">a mi viejo</string>
    <string name="app_telegram">\@alvareznieto.dannel</string>
    <string name="app_email">alvareznieto.dannel@gmail.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_cages">Cages</string>
    <string name="nav_rabbits">Rabbits</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_expenses">Expenses</string>
    <string name="common_save">Save</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_edit">Edit</string>
    <string name="common_add">Add</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_back">Back</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_search">Search</string>
    <string name="common_filter">Filter</string>
    <string name="common_no_data">No data available</string>
    <string name="common_loading">Loading…</string>
    <string name="common_error">An error occurred</string>
    <string name="common_success">Operation successful</string>
    <string name="common_close">Close</string>
    <string name="common_ok">OK</string>
    <string name="common_na">N/A</string>
    <string name="common_from">From</string>
    <string name="common_to">To</string>
    <string name="common_date">Date</string>
    <string name="common_notes">Notes</string>
    <string name="common_total">Total</string>
    <string name="common_all">All</string>
    <string name="profile_title">Welcome to Cunnis</string>
    <string name="profile_subtitle">Set up your farm profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_farm_name">Farm Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_address">Address</string>
    <string name="profile_username_required">Username is required</string>
    <string name="profile_welcome">Welcome, %s!</string>
    <string name="cage_title">Cages</string>
    <string name="cage_add">Add Cage</string>
    <string name="cage_edit">Edit Cage</string>
    <string name="cage_number">Cage Number</string>
    <string name="cage_number_hint">Enter cage number</string>
    <string name="cage_notes">Notes</string>
    <string name="cage_rabbit_count">%d rabbit(s)</string>
    <string name="cage_empty">No rabbits in this cage</string>
    <string name="cage_deleted">Cage deleted</string>
    <string name="cage_delete_confirm">Delete this cage? Rabbits will be unassigned.</string>
    <string name="cage_detail">Cage #%d</string>
    <string name="rabbit_title">Rabbits</string>
    <string name="rabbit_add">Add Rabbit</string>
    <string name="rabbit_edit">Edit Rabbit</string>
    <string name="rabbit_name">Name</string>
    <string name="rabbit_name_required">Name is required</string>
    <string name="rabbit_identifier">ID</string>
    <string name="rabbit_gender">Gender</string>
    <string name="rabbit_male">Male</string>
    <string name="rabbit_female">Female</string>
    <string name="rabbit_breed">Breed</string>
    <string name="rabbit_breed_hint">Type or select breed</string>
    <string name="rabbit_birth_date">Date of Birth</string>
    <string name="rabbit_born_in_farm">Born in farm</string>
    <string name="rabbit_sire">Father</string>
    <string name="rabbit_dam">Mother</string>
    <string name="rabbit_cage">Cage</string>
    <string name="rabbit_no_cage">No cage assigned</string>
    <string name="rabbit_photo">Photo</string>
    <string name="rabbit_take_photo">Take Photo</string>
    <string name="rabbit_select_photo">Select from Gallery</string>
    <string name="rabbit_age">Age</string>
    <string name="rabbit_weight">Weight</string>
    <string name="rabbit_status">Status</string>
    <string name="rabbit_status_active">Active</string>
    <string name="rabbit_status_dead">Dead</string>
    <string name="rabbit_status_sold">Sold</string>
    <string name="rabbit_status_slaughtered">Slaughtered</string>
    <string name="rabbit_notes">Notes</string>
    <string name="rabbit_deleted">Rabbit deleted</string>
    <string name="rabbit_delete_confirm">Delete this rabbit? All history will be lost.</string>
    <string name="rabbit_detail">Rabbit Detail</string>
    <string name="rabbit_days_old">%d days old</string>
    <string name="rabbit_months_old">%d months old</string>
    <string name="rabbit_unknown_age">Unknown age</string>
    <string name="rabbit_profile">Profile</string>
    <string name="cemental_title">Buck (Reproductor)</string>
    <string name="cemental_no_set">No reproductor set</string>
    <string name="cemental_set">Set as Reproductor</string>
    <string name="cemental_info">The buck is the main male reproductor of your farm.</string>
    <string name="cemental_confirm_change">Setting a new reproductor will remove the current one. Continue?</string>
    <string name="health_title">Health History</string>
    <string name="health_add">Add Health Record</string>
    <string name="health_type">Type</string>
    <string name="health_checkup">Checkup</string>
    <string name="health_vaccination">Vaccination</string>
    <string name="health_deworming">Deworming</string>
    <string name="health_illness">Illness</string>
    <string name="health_injury">Injury</string>
    <string name="health_surgery">Surgery</string>
    <string name="health_veterinarian">Veterinarian</string>
    <string name="health_medication">Medication</string>
    <string name="health_cost">Cost</string>
    <string name="health_next_due">Next Due</string>
    <string name="weight_title">Weight History</string>
    <string name="weight_add">Add Weight Record</string>
    <string name="weight_value">Weight (lb)</string>
    <string name="weight_hint">Enter weight in pounds</string>
    <string name="weight_avg">Average</string>
    <string name="weight_max">Max</string>
    <string name="weight_current">Current</string>
    <string name="weight_lbs">%.1f lb</string>
    <string name="repro_title">Reproductive History</string>
    <string name="estrus_title">Estrus Records</string>
    <string name="estrus_add">Record Estrus</string>
    <string name="estrus_date">Estrus Date</string>
    <string name="estrus_observations">Observations</string>
    <string name="estrus_receptive">Receptive</string>
    <string name="estrus_not_receptive">Not Receptive</string>
    <string name="estrus_next_predicted">Next predicted: %s</string>
    <string name="estrus_empty">No estrus records yet</string>
    <string name="estrus_delete_confirm">Delete this estrus record?</string>
    <string name="estrus_deleted">Estrus record deleted</string>
    <string name="estrus_saved">Estrus record saved</string>
    <string name="mating_title">Mating Records</string>
    <string name="mating_add">Record Mating</string>
    <string name="mating_date">Mating Date</string>
    <string name="mating_buck">Buck</string>
    <string name="mating_doe">Doe</string>
    <string name="mating_effective">Effective</string>
    <string name="mating_result">Result</string>
    <string name="mating_pending">Pending</string>
    <string name="mating_successful">Successful</string>
    <string name="mating_unsuccessful">Unsuccessful</string>
    <string name="mating_empty">No mating records yet</string>
    <string name="mating_due_date">Due date: %s</string>
    <string name="parturition_title">Parturition Records</string>
    <string name="parturition_add">Record Parturition</string>
    <string name="parturition_date">Parturition Date</string>
    <string name="parturition_due_date">Due Date</string>
    <string name="parturition_total_born">Total Born</string>
    <string name="parturition_born_alive">Born Alive</string>
    <string name="parturition_born_dead">Born Dead</string>
    <string name="parturition_weaned">Weaned</string>
    <string name="parturition_est_weaning">Est. Weaning</string>
    <string name="parturition_complications">Complications</string>
    <string name="parturition_empty">No parturition records yet</string>
    <string name="movement_title">Movement History</string>
    <string name="movement_add">Record Movement</string>
    <string name="movement_from">From</string>
    <string name="movement_to">To</string>
    <string name="movement_reason">Reason</string>
    <string name="movement_weaning">Weaning</string>
    <string name="movement_breeding">Breeding</string>
    <string name="movement_reorganization">Reorganization</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_by_rabbit">By Rabbit</string>
    <string name="stats_by_cage">By Cage</string>
    <string name="stats_general">General</string>
    <string name="stats_total_rabbits">Total Rabbits</string>
    <string name="stats_active_rabbits">Active Rabbits</string>
    <string name="stats_total_cages">Total Cages</string>
    <string name="stats_total_born">Total Born</string>
    <string name="stats_mortality_rate">Mortality Rate</string>
    <string name="stats_avg_litter_size">Avg Litter Size</string>
    <string name="stats_total_expenses">Total Expenses</string>
    <string name="stats_weight_chart">Weight Evolution</string>
    <string name="stats_reproduction_chart">Reproduction Overview</string>
    <string name="stats_weight_evolution">Weight Evolution</string>
    <string name="stats_reproduction_overview">Reproduction Overview</string>
    <string name="stats_expense_breakdown">Expense Breakdown</string>
    <string name="stats_breed_distribution">Breed Distribution</string>
    <string name="stats_month">Month</string>
    <string name="stats_alive">Born Alive</string>
    <string name="stats_dead">Born Dead</string>
    <string name="stats_no_chart_data">No data available for chart</string>
    <string name="stats_rabbit_title">Rabbit Statistics</string>
    <string name="stats_age">Age</string>
    <string name="stats_matings">Matings</string>
    <string name="stats_parturitions">Parturitions</string>
    <string name="expense_title">Expenses</string>
    <string name="expense_add">Add Expense</string>
    <string name="expense_category">Category</string>
    <string name="expense_feed">Feed</string>
    <string name="expense_medicine">Medicine</string>
    <string name="expense_equipment">Equipment</string>
    <string name="expense_veterinary">Veterinary</string>
    <string name="expense_transport">Transport</string>
    <string name="expense_amount">Amount ($)</string>
    <string name="expense_description">Description</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="feeding_title">Feeding Records</string>
    <string name="feeding_add">Add Feeding Record</string>
    <string name="feeding_type">Feed Type</string>
    <string name="feeding_quantity">Quantity (lb)</string>
    <string name="feeding_cage">Cage</string>
    <string name="export_title">Export / Import</string>
    <string name="exit_title">Record Exit</string>
    <string name="about_title">About Cunnis</string>
    <string name="mating_record_title">Record Mating</string>
    <string name="mating_select_buck">Select Buck</string>
    <string name="mating_date_label">Mating Date</string>
    <string name="mating_effective_label">Effective</string>
    <string name="mating_attempt_label">Attempt Number</string>
    <string name="mating_observations_label">Observations</string>
    <string name="expenses_empty">No expenses recorded</string>
    <string name="expenses_filter_all">All</string>
    <string name="expenses_total_label">Total Expenses</string>
</resources>