<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/common_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/nav_stats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_set_cemental"
        android:title="@string/cemental_set" />
    <item
        android:id="@+id/action_transfer_cage"
        android:icon="@drawable/ic_cage"
        android:title="@string/movement_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_record_exit"
        android:title="@string/exit_title" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/common_delete" />
</menu>
