<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <com.google.android.material.textfield.MaterialTextInputLayout
        android:id="@+id/tilDate"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estrus_date">

        <com.google.android.material.textfield.MaterialTextInputEditText
            android:id="@+id/edtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.MaterialTextInputLayout>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipReceptive"
        style="@style/Widget.Cunnis.Chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/estrus_receptive"
        android:checkable="true"
        android:checked="true" />

    <com.google.android.material.textfield.MaterialTextInputLayout
        android:id="@+id/tilObservations"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/estrus_observations">

        <com.google.android.material.textfield.MaterialTextInputEditText
            android:id="@+id/edtObservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:maxLines="4" />

    </com.google.android.material.textfield.MaterialTextInputLayout>

</LinearLayout>
